kubernetes/k3s/apps/media/booklore/chart/templates/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: booklore
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: booklore
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateways
          podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: public
      ports:
        - port: 9568
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mariadb
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mariadb
      ports:
        - port: 3306
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/24
